# particles-io

./: game_communication_101.md  pubsub and realtime best articles.md  readme.md
backend/: app.py  docker-compose.yml  pubsub.md  pyproject.toml  readme.md  requirements.txt
backend/scripts/: flush_redis.py
backend/system/: __init__.py  auth.py  constant.py  db.py  models.py  utils.py
backend/system/cache/: available_rooms.py  cache.py  game_room.py  leaderboard.py  players.py  players_lobby.py  projectile.py  room.py
backend/system/database/: models.py  utils.py
backend/system/events/: __init__.py  consumers.py  events.py  publishers.py  pubsub.py
backend/system/routes/: lobby.py  router.py
backend/system/socket/: __init__.py  app.py  decorators.py  game.py  lobby.py  utils.py
frontend/: .env  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx  Board.tsx  SocketProvider.tsx  core.ts  index.css  utils.ts
frontend/src/components/: AuthProctect.tsx  AuthProvider.tsx  LeaderboardCard.tsx  Loader.tsx  MultiplayerBoard.tsx  SingleBoard.tsx
frontend/src/components/ui/: pagination.tsx  sidebar.tsx  toaster.tsx
frontend/src/context/: GameSocketProvider.tsx  LobbyContextProvider.tsx  SocketProvider.tsx
frontend/src/core/: core.ts  gameEngine.ts
frontend/src/hooks/: Focus.tsx  use-mobile.tsx
frontend/src/pages/game-room/: index.tsx
frontend/src/pages/landing-page/: index.tsx
infra/: .gitignore  package-lock.json  package.json
infra/lib/: infra-stack.ts  postgres-stack.ts  redis-stack.ts
infra/lib/constructs/: ecs-deploy.ts
(+11 files in other folders)
